syntax = "proto3";

package authentication;

service Authentication {
  rpc Login (LoginRequest) returns (AuthenticateResponse);
  rpc Register (RegisterRequest) returns (AuthenticateResponse);
}

message AuthenticateResponse {
  string access_token = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}


